--- a/preview.html
+++ b/preview.html
@@ -48,14 +48,6 @@
         </div>
     </div>
     
-    <script src="/static/js/config.js"></script>
-    <script src="/static/js/constants/mlb-logos.js"></script>
-    <script src="/static/js/constants/mlb-secondary-logos.js"></script>
-    <script src="/static/js/constants/mlb-colors.js"></script>
-    <script src="/static/js/constants/mlb-gradient-colors.js"></script>
-    <script src="/static/js/teams.js"></script>
-    <script src="/static/js/renderer.js"></script>
-    <script src="/static/js/data.js"></script>
-    <script src="/static/js/controls.js"></script>
+    <script type="module" src="/static/js/main.js"></script>
 </body>
 </html>
