--- a/preview.html
+++ b/preview.html
@@ -39,7 +39,10 @@
         <div class="display" id="display">
             <div class="size-indicator" id="size-indicator">800 x 400</div>
             <div class="header" id="header">
-                <h1 id="header-title">MLB Scores for Tuesday, September 2</h1>
+                <div class="header-left">
+                    <img src="/assets/logos/leagues/mlb.png" alt="MLB" class="league-logo" id="league-logo">
+                    <h1 id="header-title">MLB Scores for Tuesday, September 2</h1>
+                </div>
                 <div class="current-time" id="current-time">12:34 PM</div>
             </div>
             <div class="games-grid" id="games">
