Bunch of small fixes

--- a/src/display.html
+++ b/src/display.html
@@ -42,17 +42,8 @@
         }
 
         .game-pill {
-            padding: 6px 8px !important;
+            padding: 10px 10px 10px 12px !important;
             min-height: auto !important;
-            font-size: 0.85em !important;
-        }
-
-        .game-pill .team-name {
-            font-size: 0.9em !important;
-        }
-
-        .game-pill .score {
-            font-size: 1.1em !important;
         }
 
         .header {
