Standard naming conventions

--- a/src/display.html
+++ b/src/display.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sports Scores Display</title>
+    <title>E-Ink Scoreboard Display</title>
     <link rel="stylesheet" href="/static/styles/display-styles.css">
     <style>
         /* Clean display styles - remove dev UI elements */
