--- a/src/preview.html
+++ b/src/preview.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sports Scores Preview</title>
+    <title>E-Ink Scoreboard Preview</title>
     <link rel="stylesheet" href="/static/styles/display-styles.css">
     <link rel="stylesheet" href="/static/styles/dev-styles.css">
 </head>
