Couple more logic tweaks

--- a/src/display.html
+++ b/src/display.html
@@ -58,9 +58,9 @@
         <div class="header" id="header">
             <div class="header-left">
                 <img src="/assets/logos/leagues/mlb.png" alt="MLB" class="league-logo" id="league-logo">
-                <h1 id="header-title">MLB Scores for Wednesday, September 3</h1>
+                <h1 id="header-title">MLB Scores</h1>
             </div>
-            <div class="current-time" id="current-time">2:15 PM</div>
+            <div class="current-time" id="current-time"></div>
         </div>
         <div class="games-grid" id="games">
             <!-- Games will be inserted here -->
