--- a/src/preview.html
+++ b/src/preview.html
@@ -1,70 +1,77 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>E-Ink Scoreboard Preview</title>
-    <link rel="stylesheet" href="/static/styles/variables.css">
-    <link rel="stylesheet" href="/static/styles/mlb-scores-styles.css">
-    <link rel="stylesheet" href="/static/styles/dev-styles.css">
-    <link rel="stylesheet" href="/static/styles/screensaver-styles.css">
-</head>
-<body>
+    <link rel="stylesheet" href="/static/styles/variables.css" />
+    <link rel="stylesheet" href="/static/styles/mlb-scores-styles.css" />
+    <link rel="stylesheet" href="/static/styles/dev-styles.css" />
+    <link rel="stylesheet" href="/static/styles/screensaver-styles.css" />
+  </head>
+  <body>
     <!-- Dev Controls Tray -->
     <div class="dev-tray">
-        <button class="dev-toggle" onclick="toggleDevTray()" id="devToggle">Settings</button>
-        <div class="controls" id="devControls">
-            <div class="controls-header">
-                <span>Settings</span>
-                <button class="dismiss-btn" onclick="toggleDevTray()">Close</button>
-            </div>
-            <div class="control-section">
-                <label>MLB</label>
-                <div class="control-buttons">
-                    <button onclick="loadMLBData()">Mixed</button>
-                    <button onclick="loadMLBScheduledData()">Scheduled</button>
-                    <button onclick="loadMLBEmptyData()">Empty</button>
-                    <button onclick="fetchLiveData()">Live</button>
-                </div>
-            </div>
-            <div class="control-section">
-                <label>NFL</label>
-                <div class="control-buttons">
-                    <button onclick="loadNFLData()">Mixed</button>
-                </div>
-            </div>
-            <div class="control-section">
-                <label>CFB</label>
-                <div class="control-buttons">
-                    <button onclick="loadCFBData()">Mixed</button>
-                </div>
-            </div>
-            <div class="control-section">
-                <label>Display Size</label>
-                <div class="control-buttons">
-                    <button onclick="setSize(800, 480)">800×480</button>
-                    <button onclick="setSize(1600, 1200)">1600×1200</button>
-                </div>
-            </div>
+      <button class="dev-toggle" onclick="toggleDevTray()" id="devToggle">
+        Settings
+      </button>
+      <div class="controls" id="devControls">
+        <div class="controls-header">
+          <span>Settings</span>
+          <button class="dismiss-btn" onclick="toggleDevTray()">Close</button>
         </div>
+        <div class="control-section">
+          <label>MLB</label>
+          <div class="control-buttons">
+            <button onclick="loadMLBData()">Mixed</button>
+            <button onclick="loadMLBScheduledData()">Scheduled</button>
+            <button onclick="loadMLBEmptyData()">Empty</button>
+            <button onclick="fetchLiveData()">Live</button>
+          </div>
+        </div>
+        <div class="control-section">
+          <label>NFL</label>
+          <div class="control-buttons">
+            <button onclick="loadNFLData()">Mixed</button>
+          </div>
+        </div>
+        <div class="control-section">
+          <label>CFB</label>
+          <div class="control-buttons">
+            <button onclick="loadCFBData()">Mixed</button>
+          </div>
+        </div>
+        <div class="control-section">
+          <label>Display Size</label>
+          <div class="control-buttons">
+            <button onclick="setSize(800, 480)">800×480</button>
+            <button onclick="setSize(1600, 1200)">1600×1200</button>
+          </div>
+        </div>
+      </div>
     </div>
-    
+
     <div class="device-frame" id="device-frame">
-        <div class="display" id="display">
-            <div class="size-indicator" id="size-indicator">800 x 480</div>
-            <div class="header" id="header">
-                <div class="header-left">
-                    <img src="/assets/logos/leagues/mlb.png" alt="MLB" class="league-logo" id="league-logo">
-                    <h1 id="header-title">MLB Scores for Tuesday, September 2</h1>
-                </div>
-                <div class="current-time" id="current-time">12:34 PM</div>
-            </div>
-            <div class="games-grid" id="games">
-                <!-- Games will be inserted here -->
-            </div>
+      <div class="display" id="display">
+        <div class="size-indicator" id="size-indicator">800 x 480</div>
+        <div class="header" id="header">
+          <div class="header-left">
+            <img
+              src="/assets/logos/leagues/mlb.png"
+              alt="MLB"
+              class="league-logo"
+              id="league-logo"
+            />
+            <h1 id="header-title">MLB Scores for Tuesday, September 2</h1>
+          </div>
+          <div class="current-time" id="current-time">12:34 PM</div>
         </div>
+        <div class="games-grid" id="games">
+          <!-- Games will be inserted here -->
+        </div>
+      </div>
     </div>
-    
+
     <script type="module" src="/static/js/main.js"></script>
-</body>
+  </body>
 </html>
